Fixed overflow issue in mobile

--- a/styles.css
+++ b/styles.css
@@ -231,3 +231,10 @@ body {
     max-width: 500px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .main-area {
+    scale: .7 !important;
+    transform: translate(-15%, -20%);
+  }
+}
